# window-renamer

./: Cargo.toml  LICENSE  example_output.txt  readme.md
src/: main.rs
