[package]
name = "window_renamer"
version = "0.1.0"
authors = ["Peter Bartyik <peter@solsys.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rexpect = "0"
tokio = { version = "0.2", features = ["full"]}

